<resources>
    <string name="demo_app_name">РазБудильник: игры</string>
    <string name="demo_title">Мини-игры</string>
    <string name="demo_difficulty">Сложность:</string>
    <string name="demo_difficulty_easy">Легко</string>
    <string name="demo_difficulty_medium">Средне</string>
    <string name="demo_difficulty_hard">Сложно</string>
    <string name="demo_game_calc">Арифметика</string>
    <string name="demo_game_memory">Повтори узор</string>
    <string name="demo_game_equation">Уравнение</string>
    <string name="demo_game_sorting">По порядку</string>
    <string name="demo_game_pairs">Найди пару</string>
    <string name="demo_game_sequence">Продолжи ряд</string>
    <string name="demo_game_stroop">Цвет и слово</string>
    <string name="demo_game_oddoneout">Найди лишнее</string>
    <string name="demo_game_maze">Лабиринт</string>
    <string name="demo_game_anagram">Анаграммы</string>
    <string name="demo_game_truefalse">Верно или нет</string>
    <string name="demo_game_reaction">Поймай момент</string>
    <string name="demo_game_counter">Сосчитай</string>
    <string name="demo_game_lights">Погаси свет</string>
    <string name="demo_game_fifteen">Пятнашки</string>
    <string name="demo_game_chain">Цепочка</string>
    <string name="demo_game_roman">Римские числа</string>
    <string name="demo_game_clock">Который час</string>
    <string name="demo_game_digits">Запомни число</string>
    <string name="demo_game_hanoi">Ханойская башня</string>
    <string name="demo_game_targetsum">Набери сумму</string>
    <string name="demo_game_matrix">Запомни клетки</string>
    <string name="demo_game_mole">Поймай крота</string>
    <string name="demo_game_pattern">Закономерность</string>
    <string name="demo_game_weekday">День недели</string>
    <string name="demo_game_percent">Проценты</string>
    <string name="demo_game_binary">Двоичный код</string>
    <string name="demo_game_reverse">Наоборот</string>
    <string name="demo_game_capitals">Столицы</string>
    <string name="demo_game_spelling">Как пишется?</string>
    <string name="demo_game_dice">Кубики</string>
    <string name="demo_result_title">Игра пройдена!</string>
    <string name="demo_result_score">Очки: %1$d</string>
    <string name="demo_result_time">Время: %1$s</string>
    <string name="demo_result_back">К списку игр</string>
</resources>
